add personal data agreement and ability to revoke this agreement
